
2021-08-25  Ron Norman <rjn@inglenet.com>

	* common.h: Replaced report.resume with report.go_label
	* reportio.c: Rework callback to application to use 
	             "switch (go_label) case  goto xxx"

2021-08-23  Ron Norman <rjn@inglenet.com>

	* fileio.c: cob_key_def only set 39 if 'keycheck' was requested
	* fextfh.c: If FCD record address changes, make required updates

2021-08-18  Ron Norman <rjn@inglenet.com>

	* fileio.c: If 'record' is not allocated when reading filename.dd
	         then allocate one
	* fextfh.c: Check for key field defined before using it

2021-08-07  Ron Norman <rjn@inglenet.com>

	* common.h: Added new fields for REPORT structures
	* reportio.c: Rework callback to application to use "goto *pointer"
	          Additional changes as each LINE now has its own data area
			  The cob_report now has a version which is checked at runtime
			  The format of cob_report I/O routines changed

2021-07-12  Ron Norman <rjn@inglenet.com>

	* fextfh.c: Check FCD-CURRENT-REC-LEN being changed on WRITE/REWRITE

2021-07-02  Simon Sobisch <simonsobisch@gnu.org>

	* reportio.c: move hard line/col limit to REPORT_MAX_LINES REPORT_MAX_COLS
	* reportio.c (write_rec): changed to completely use cob_write
	  for CODE IS to handle all file attributes; backup and restore
	  original record definition

2021-07-07  Ron Norman <rjn@inglenet.com>

	* reportio.c (cob_report_generate): Fix bug #745 - missing invoke of
	  DECLARATIVES for DETAIL line

2021-07-05  Ron Norman <rjn@inglenet.com>

	* common.h: Added  cob_file   flag_is_concat, org_filename and nxt_filename
	* common.c: Handle runtime options COB_SEQ_CONCAT_NAME and
				COB_SEQ_CONCAT_SEP used for 'concatenated input files'
	* coblocal.h: Added  fields for concatenated files
	* fileio.c: Add code to handle SEQUENTIAL and LINE SEQUENTIAL
				concatenated input files for OPEN INPUT and I-O

2021-07-02  Ron Norman <rjn@inglenet.com>

	* common.h: Added  FCD2 structure